--- a/index.html
+++ b/index.html
@@ -1,36 +1,12 @@
-<!-- TODO 1: Create the HTML Boilerplate -->
-<!DOCTYPE html>
-<html lang="eng">
-    <head>
-        <meta charset="UTF-8">
-        <title>Gabriel's Website</title>
-    </head>   
-    <body>
-        <h1>Gabriel Carrero's Portfolio</h1>
-        <img src="./assets/images/_DSF1359.jpg" height="300">
-        <h2 >I am a Web Developer / Musician</h2>
-        <hr />
-        <h3> <a href="../2.4 Movie Ranking Project/index.html">Top 3 Movies Project</a></h3>
-                <img src="./assets/images/Movie-screenshot.png" width="400" alt="Movie Ranking Project">
-        <h3><a href="../3.4 Birthday Invite Project/index.html" >Birthday Invite Project</a></h3>
-                <img src="./assets/images/Birthday-screenshot.png" height="400" alt="Birthday Invitation Project">
-     <hr />
-        <h4><a href="./public/about.html">About Me</a>
-            <a href="./public/contact.html">Contact me</a></h4>
-    </body>
-</html>
-
-
-<!-- TODO 2: Add Your previous projects' HTML into the public folder -->
-
-<!-- TODO 3: Take screenshots of your project previews and add the images to the images folder -->
-
-<!-- TODO 4: Add titles/subtitles etc. -->
-
-<!-- TODO 5: Add a link to the project pages -->
-
-<!-- TODO 6: Add images to show the project previews
-HINT for TODO 6: You can use the height attribute set to 200 to make the image smaller:
-https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img#attr-height -->
-
-<!-- TODO 7: Add the Contact Me and About Me page links -->
+<h1>It's My Birthday!!</h1>
+<h2>On the 15th of October</h2>
+<img src="https://raw.githubusercontent.com/appbrewery/webdev/main/birthday-cake3.4.jpeg" alt="Birthday cake" />
+<h3>What to bring:</h3>
+<ul>
+    <li>Balloons (I love balloons)</li>
+    <li>Cake (I'm coming back for dat cake!)</li>
+    <li>An appetite (There's going to be lots of food)</li>
+</ul>
+<h3>This is where you need to go:</h3>
+<!-- Example Google Maps Link -->
+<a href="https://www.google.com/maps/@35.7040744,139.5577317,3a,75y,289.6h,87.01t,0.72r/data=!3m6!1e1!3m4!1sgT28ssf0BB2LxZ63JNcL1w!2e0!7i13312!8i6656">Party Location</a>
